docs: diagnose owner commit costs and identify redundant terminal insertion